--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=library-management-system
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem
+spring.datasource.username=root
+spring.datasource.password=!c$xQAihda3W^r
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
