Added Orders, Book, Service, etc.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=lms-backend
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem
 spring.datasource.username=root
-spring.datasource.password=Sep2021104218
+spring.datasource.password=!c$xQAihda3W^r
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
