--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=lms-backend
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem
+
+spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=!c$xQAihda3W^r
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+it120p.app.jwtSecret= ======================BezKoder=Spring===========================
+it120p.app.jwtExpirationMs=86400000
