--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=lms-backend
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=!c$xQAihda3W^r
 
