--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 it120p.app.jwtSecret= ======================BezKoder=Spring===========================
 it120p.app.jwtExpirationMs=86400000
+
+#email_config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=it120p.lms@gmail.com
+spring.mail.password=pblq nmjc bhbl yrue
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.thymeleaf.enabled=true
+
