--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ it120p.app.jwtExpirationMs=86400000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=it120p.lms@gmail.com
-spring.mail.password=pblq nmjc bhbl yrue
+spring.mail.password={password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.thymeleaf.enabled=true
